create route /api/question and /api/question/{id_subject} with method POST and GET
