# src/controller/question-controller.js
@@ -1,0 +1,35 @@
+import questionService from "../services/question-service";
+
+const createQuestion = async (req, res, next) => {
+  try {
+    await questionService.createQuestion(req.body);
+    res.status(201).json({
+      statusCode: 201,
+      status: "OK",
+      message: "Question successfully created",
+    });
+  } catch (error) {
+    next(error);
+  }
+};
+
+const getQuestion = async (req, res, next) => {
+  try {
+    const questions = await questionService.getQuestion(req.params);
+    res.json({
+      statusCode: 200,
+      status: "OK",
+      message: "Success get all questions",
+      data: {
+        questions,
+      },
+    });
+  } catch (error) {
+    next(error);
+  }
+};
+
+export default {
+  createQuestion,
+  getQuestion,
+};
